@@ -5,7 +5,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.validation.BindingResult;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ErrorResponseFactory {
@@ -18,7 +17,8 @@ public class ErrorResponseFactory {
         List<FieldError> fieldErrors = bindingResult.getFieldErrors()
                 .stream()
                 .map(FieldError::of)
-                .collect(Collectors.toList());
+                .toList();
+
         return ErrorResponse.of(code, request.getRequestURI(), fieldErrors);
     }
 }
